@@ -11,6 +11,16 @@
 
   <name>Evernote</name>
 
+  <repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/libs-snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <dependencies>
     <!--Spring-->
@@ -38,7 +48,7 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
-      <version>1.10.1.RELEASE</version>
+      <version>2.1.0.BUILD-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -51,11 +61,12 @@
       <version>5.0.2.RELEASE</version>
     </dependency>
 
+
     <!--DB-->
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>5.1.0.Final</version>
+      <artifactId>hibernate-java8</artifactId>
+      <version>5.2.11.Final</version>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
@@ -86,12 +97,23 @@
       <version>2.9.2</version>
     </dependency>
 
-    <!--Aspect-->
+    <!--Security-->
     <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-      <version>1.8.13</version>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>4.2.3.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.2.3.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.2.3.RELEASE</version>
+    </dependency>
+
 
     <!--Validation-->
     <dependency>
@@ -136,26 +158,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>2.9.0</version>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>4.0.0.RELEASE</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-test-autoconfigure</artifactId>
-      <version>1.5.8.RELEASE</version>
-      <scope>test</scope>
-    </dependency>
-
 
   </dependencies>
+
 
   <build>
     <plugins>
@@ -168,7 +178,6 @@
           <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
           <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
           <excludes>
-            <exclude>**/config/**</exclude>
             <exclude>**/model/**</exclude>
           </excludes>
         </configuration>
@@ -191,10 +200,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.1</version>
-        <configuration>
-          <argLine>-server -ea -XX:MaxPermSize=256m -Xmx4g -XX:-UseSplitVerifier ${argLine}
-          </argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
